fix align

--- a/styles/tweaks-layout.less
+++ b/styles/tweaks-layout.less
@@ -117,24 +117,24 @@
     display: flex; 
     flex-direction: column;
 
-    [data-align*=center] {
+    &[data-align*=center] {
       align-items: center;
       justify-content: center;
     }
 
-    [data-align*=top] {
+    &[data-align*=top] {
       align-items: flex-start;
     }
 
-    [data-align*=bottom] {
+    &[data-align*=bottom] {
       align-items: flex-end;
     }
 
-    [data-align*=left] {
+    &[data-align*=left] {
       justify-content: left;
     }
 
-    [data-align*=right] {
+    &[data-align*=right] {
       justify-content: right;
     }
   }
